# ComfyUI_MagicQuill

./: .gitignore  MagicQuill.json  README.md  __init__.py  install.py  llava_new.py  magic_quill.py  pyproject.toml  requirements.txt  scribble_color_edit.py  utils.py
LLaVA/llava/: __init__.py
LLaVA/llava/model/: builder.py  llava_arch.py
LLaVA/llava/model/language_model/: llava_llama.py  llava_mpt.py
js/: extension.js  magicquill_widget.js
lib/: magicquill.es.js
