[tool.poetry]
name = "ComfyUI-MagicQuill"
version = "1.0.4"
description = "Fixed version of the original MagicQuill node."
authors = ["brantje <brantje@gmail.com>"]
license = { text = "MIT License" }
readme = "README.md"

[tool.poetry.dependencies]

pynvml = "^11.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
name = "comfyui_magicquill_fixed" # Unique identifier for your node. Immutable after creation..
description = "Fixed version of the original MagicQuill node. Required nodes: ComfyUI-Brushnet and ComfyUI Controlnet AUX"
version = "1.0.4" # Custom Node version. Must be semantically versioned.
dependencies  = [
    'opencv-python',
    'diffusers',
    'torchsde',
    'protobuf',
    'transformers',
    'tokenizers',
    'sentencepiece',
    'shortuuid',
    'accelerate',
    'peft',
    'bitsandbytes',
    'pydantic',
    'markdown2',
    'scikit-learn',
    'requests',
    'httpx',
    'uvicorn',
    'fastapi',
    'einops',
    'einops-exts',
    'timm',
    'webcolors',
    'torch',
    'importlib_metadata',
    'huggingface_hub',
    'scipy',
    'opencv-python',
    'filelock',
    'numpy',
    'Pillow',
    'einops',
    'torchvision',
    'pyyaml',
    'scikit-image',
    'python-dateutil',
    'mediapipe',
    'svglib',
    'fvcore',
    'yapf',
    'omegaconf',
    'ftfy',
    'addict',
    'yacs',
    'trimesh[easy]',
    'albumentations',
    'scikit-learn',
    'matplotlib'
] # Filled in from requirements.txt

[project.urls]
Repository = "https://github.com/brantje/ComfyUI_MagicQuill"

[tool.comfy]
PublisherId = "brantje"
DisplayName = "ComfyUI MagicQuill (fixed)"
